# RayTrace

./: CMakeLists.txt  README.md
include/: BVH.h  Canvas.h  Color.h  Hittable.h  Object.h  Ray.h  Rng.h  Scene.h  Vector.h
include/Camera/: Camera.h  PerspectiveCamera.h
include/FileFormat/: FileFormat.h  PFM.h  PPM.h
include/Material/: Dielectric.h  Lambert.h  Light.h  Material.h  Metal.h  Mix.h  Mixture.h
include/Renderer/: BasicRenderer.h  Renderer.h
include/Shape/: Cube.h  Shape.h  Sphere.h
include/Texture/: Checker.h  Image.h  Solid.h  Texture.h
include/impl/: common.h  fake_thread_pool.h  thread_pool.h  vector.h
src/: main.cpp  random.cpp
src/Material/: Dielectric.cpp  Lambert.cpp  Metal.cpp
src/Renderer/: BasicRenderer.cpp
src/Shape/: Cube.cpp  Sphere.cpp
src/Texture/: Image.cpp
src/impl/: BVH.cpp  stb_image.cpp
